Adjust Testcase to pass Java8 Compilation